[package]
name = "ephemeral"
version = "0.2.1"
authors = ["Dylan DPC<dylan.dpc@gmail.com>"]
edition = "2018"
description = "creates temporary project at user-defined location to be used for testing"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/Dylan-DPC/ephemeral"

[dependencies]